--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-autotranslate",
+  "name": "@smsadvert/json-autotranslate",
   "description": "Translate a folder of JSON files containing translations into multiple languages.",
   "version": "1.3.3",
   "main": "index.js",
@@ -23,9 +23,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/leolabs/json-autotranslate.git"
+    "url": "https://github.com/smsadvert/json-autotranslate"
   },
-  "homepage": "https://github.com/leolabs/json-autotranslate",
+  "homepage": "https://github.com/smsadvert/json-autotranslate",
   "files": [
     "lib/*"
   ],
